--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="jumbotron">
   <div class="jumbo container text-center">
-    <img src="/static/big_house.jpg" class="background" alt="Background">
+    <img src="/portfolio/static/big_house.jpg" class="background" alt="Background">
     <h1 class="top_main">UX & Front End Developer</h1>
   </div>
 </div>
@@ -43,7 +43,7 @@
   <h3><br>The Developer in a Nutshell</h3><br><br>
   <div class="row">
     <div class="col-lg-6">
-      <img src="/static/grace.jpg" class="img-responsive-7" style="width:100%" alt="Image">
+      <img src="/portfolio/static/grace.jpg" class="img-responsive-7" style="width:100%" alt="Image">
     </div>
     <div class="col-lg-6">
       <h2 class="God">God</h2>
@@ -56,7 +56,7 @@
         up watching college football with him got me hooked at a young age and I haven't looked back since.</p>
     </div>
     <div class="col-lg-6">
-      <img src="/static/golf.jpg" class="img-responsive-4" style="width:100%" alt="Image">
+      <img src="/portfolio/static/golf.jpg" class="img-responsive-4" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
@@ -64,7 +64,7 @@
 <div class="container-fluid bg-3 text-center">
   <div class="row">
     <div class="col-lg-6">
-      <img src="/static/google.png" class="img-responsive-7" style="width:100%" alt="Image">
+      <img src="/portfolio/static/google.png" class="img-responsive-7" style="width:100%" alt="Image">
     </div>
     <div class="col-lg-6">
       <h2 class="nerd">Information Nerd</h2>
@@ -78,7 +78,7 @@
       be where I am today. It is their love and support that has made me into who I am today.</p>
     </div>
     <div class="col-lg-6">
-      <img src="/static/Family.jpg" class="img-responsive-7" style="width:100%" alt="Image">
+      <img src="/portfolio/static/Family.jpg" class="img-responsive-7" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
