--- a/Projects/index.html
+++ b/Projects/index.html
@@ -37,11 +37,11 @@
   <div class="row">
     <div class="col-sm-6">
       <p style="font-size: 150%;">Hillary Clinton's Tweeting Scores</p>
-      <img src="/static/Hillary.png" class="img-responsive-5" style="width:100%" alt="Image">
+      <img src="/portfolio/static/Hillary.png" class="img-responsive-5" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-6">
       <p class="trump"style="font-size: 150%; padding-bottom:4px;">Donald Trump's Tweeting Scores</p>
-      <img src="/static/Trump.png" class="img-responsive-5" style="width:100%" alt="Image">
+      <img src="/portfolio/static/Trump.png" class="img-responsive-5" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-12">
       <h2>Social Presidents</h2>
@@ -61,7 +61,7 @@
     </div>
     <div class="col-sm-6">
       <a href="http://www.thethistledesigngroup.appspot.com/" target="_blank">
-      <img src="/static/thistle.jpeg" class="img-responsive-6" alt="Image">
+      <img src="/portfolio/static/thistle.jpeg" class="img-responsive-6" alt="Image">
       </a>
     </div>
   </div>
@@ -70,7 +70,7 @@
 <div class="container-fluid bg-3 text-center">
   <div class="row">
     <div class="col-sm-4">
-      <img src="/static/Info1.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="/portfolio/static/Info1.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4">
       <h2 class="info">Infographics</h2>
@@ -80,7 +80,7 @@
       They were used to help educate people on the ways of SEO and information overload; created in 2015.</p>
     </div>
     <div class="col-sm-4">
-      <img src="/static/Info2.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="/portfolio/static/Info2.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
