--- a/Fieldwork/index.html
+++ b/Fieldwork/index.html
@@ -35,7 +35,7 @@
 <div class="container-fluid bg-3 text-center">
   <div class="row">
     <div class="col-lg-5">
-      <br><br><img src="/static/Kenmar.png" class="img-responsive-1" alt="Image">
+      <br><br><img src="/portfolio/static/Kenmar.png" class="img-responsive-1" alt="Image">
     </div>
     <div class="col-lg-7">
       <p class="job_text">Working under a VP of Sales for Kenmar, I gained experience with product management through the
@@ -45,7 +45,7 @@
       company logistics for parts coming from all over the world.</p>
     </div>
     <div class="col-sm-5">
-      <img src="/static/ES.JPG" class="img-responsive-2" alt="Image">
+      <img src="/portfolio/static/ES.JPG" class="img-responsive-2" alt="Image">
     </div>
     <div class="col-sm-7">
       <p class="job_text">Having received the Evans Scholarship to the University of Michigan, I wanted to give back to the
@@ -61,7 +61,7 @@
 <div class="container-fluid bg-3 text-center">
   <div class="row">
     <div class="col-sm-5">
-      <img src="/static/volvik.png" class="img-responsive-3" alt="Image">
+      <img src="/portfolio/static/volvik.png" class="img-responsive-3" alt="Image">
     </div>
     <div class="col-sm-7">
       <p class="job_text">For the Volvik Championship, prior to the tournament, I created graphics and fliers
